--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="container">
                 <div class="divider"></div>
                 <div class="heading">
-                    <h2>Skills</h2>
+                    <h2>Skills thick</h2>
                 </div>
     
                 <div class="container">
