--- a/index.html
+++ b/index.html
@@ -149,10 +149,10 @@
                                 <div class="timeline-body">
                                     <ul>
                                         <p>
-                                            Créer portefolio en HTML & CSS
-                                            Codage de site web en HTML & CSS
-                                            Modification de page web HTML & CSS
-                                            Création de page vitrine en HTML & CSS
+                                            Créer portefolio en HTML & CSS<br>
+                                            Codage de site web en HTML & CSS<br>
+                                            Modification de page web HTML & CSS<br>
+                                            Création de page vitrine en HTML & CSS<br>
                                             Développement de nouvelles fonctionnalités
                                         </p>
                                     </ul>
