--- a/index.html
+++ b/index.html
@@ -177,10 +177,10 @@
                                 <div class="timeline-body">
                                     <ul>
                                         <p>
-                                            Concevoir site web avec Wordpress
-                                            Créer des pages web des sites   clients
-                                            Création d’un cahier des charges technique
-                                            Analyse des besoins utilisateurs
+                                            Concevoir site web avec Wordpress<br>
+                                            Créer des pages web des sites clients<br>
+                                            Création d’un cahier des charges technique<br>
+                                            Analyse des besoins utilisateurs<br>
                                             Correction de fonctionnalités
                                         </p>
                                     </ul>
