--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                     </div>
 
                     <div class="col-md-4">
-                        <a href="" target="_blank">
+                        <a href="https://youtube.com" target="_blank">
                             <img src="images/youtube.jpg" class="img-thumbnail" alt="Abonnez-vous à ma chaine Youtube">
                         </a>
                     </div>
