--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                   <a class="nav-link" href="#experiences">Professional Experiences</a>
                   <a class="nav-link" href="#education">Education</a>
                   <a class="nav-link" href="#portfolio">portfolio</a>
-                  <a class="nav-link" href="https://wa.link/nskxza" id="button2">Whatsapp</a>
+                  <a class="nav-link" href="https://wa.me/0783793963" id="button2">Whatsapp</a>
                 </div>
               </div>
             </div>
