--- a/index.html
+++ b/index.html
@@ -253,6 +253,7 @@
                         <h4>Formation Développeur Web</em></h4>
                         <div class="divider"></div>
                         <p style="color: white;">HTML, CSS, JavaScript<br>Responsive Design</p>
+                        <a href="docs/Certificat de fin de formation CHARLES FRED.pdf" target="_blank" class="button3">My Certificate</a>
                         </div>
 
                     </div>
